# uic_error_example

./: CMakeLists.txt
custom_widgets/: CMakeLists.txt  Custom_Widget.cpp  Custom_Widget.h  customwidget.ui  using_custom_widget.cpp
